--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ anyhow = "1.0.51"
 atty = "0.2.14"
 grep = "0.2.8"
 ignore = "0.4"
+num_cpus = "1.13.1"
 regex = "1.5.4"
 structopt = "0.3"
 termcolor = "1.1.2"
