--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,11 +15,13 @@ ignore = "0.4"
 num_cpus = "1.13.1"
 regex = "1.5.4"
 structopt = "0.3"
+tempfile = "3.2.0"
 termcolor = "1.1.2"
 text_io = "0.1.9"
 
 [dev-dependencies]
 assert_cmd = "1"
+# TODO: replace with tempfile
 tempdir = "0.3"
 
 [profile.release]
