--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,11 +10,11 @@ categories = ["command-line-utilities"]
 [dependencies]
 anyhow = "1.0.51"
 atty = "0.2.14"
+clap = { version = "3.0.5", features = ["derive"] }
 grep = "0.2.8"
 ignore = "0.4"
 num_cpus = "1.13.1"
 regex = "1.5.4"
-structopt = "0.3"
 tempfile = "3.2.0"
 termcolor = "1.1.2"
 text_io = "0.1.9"
